--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "mock-file-server": "^0.1.17",
     "papaparse": "^5.3.0",
     "react": "^17.0.2",
     "react-bootstrap": "^1.5.2",
